[package]
name = "bfilters"
version = "0.1.4"
edition = "2021"
description = "Simple bloom filter implementation in Rust."
license-file = "LICENSE"
repository = "https://github.com/alexanderbakhmach/bloom-filter"

[dependencies]
fasthash = "0.4.0"
serde = {version = "1.0.151", features = ["derive"]}
serde_json = "1.0.40" 