[package]
name = "bfilters"
version = "0.2.0"
edition = "2021"
description = "Simple bloom filter implementation in Rust."
license-file = "LICENSE"
repository = "https://github.com/alexanderbakhmach/bloom-filter"

[dependencies]
fasthash = "0.4.0"
serde = {version = "1.0.151", features = ["derive"]}
serde_json = "1.0.40" 
bitarray-naive = "0.1.1"